@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-30T16:13:54Z",
-  "count_outdated" : 639,
-  "uniques_outdated" : 129,
+  "timestamp" : "2022-10-02T16:08:07Z",
+  "count_outdated" : 640,
+  "uniques_outdated" : 130,
   "count" : 643,
   "uniques" : 133,
   "views" : [
-    {
-      "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-20T00:00:00Z",
       "count": 1,
